# fantasyRender

./: CMakeLists.txt  OBJ_Loader.h  README.md  camera.cpp  camera.h  fantasyRender.sln  light.h  main.cpp  mesh.cpp  mesh.h  rasterization.cpp  rasterization.h  scene.cpp  scene.h  shader.cpp  shader.h  texture.cpp  texture.h  tgaimage.cpp  tgaimage.h  type.cpp  type.h  window.h
miniRender/: camera.cpp  camera.h  light.h  main.cpp  math.cpp  math.h  mesh.cpp  mesh.h  miniRender.vcxproj  miniRender.vcxproj.filters  output.tga  rasterization.cpp  rasterization.h  scene.cpp  scene.h  shader.cpp  shader.h  texture.cpp  texture.h  tgaimage.cpp  tmp.cpp  tmp.h  triangle.cpp  triangle.h  type.cpp  type.h  window.cpp  window.h  window_windows.cpp
miniRender/models/cube/: wall.tga
miniRender/x64/Debug/: rasterization.obj.enc  vc141.idb
miniRender/x64/Debug/fantasyRender.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  fantasyRender.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
miniRender/x64/Debug/miniRender.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
miniRender/x64/Release/fantasyRender.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  fantasyRender.lastbuildstate  fantasyRender.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
models/african_head/: readme.txt
models/boggie/: readme.txt
models/diablo3_pose/: readme.txt
models/spot/: spot_texture.tga
platform/: window_linux.cpp  window_windows.cpp
platform/linux/: window.h  window_linux.cpp
platform/windows/: window.h  window_windows.cpp
x64/Debug/: fantasyRender.ilk
x64/Release/: fantasyRender.iobj  fantasyRender.ipdb
